src/objects/Loaner_Line__c/Loaner_Line__c.object-meta.xml
<CustomObject>
    <label>Loaner Line</label>
    <nameField>
        <displayFormat>LI-{000000}</displayFormat>
        <label>Loaner Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loaner Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>