src/objects/Loaner_Line__c/fields/Admin_Extn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Admin_Extn_Reason__c</fullName>
    <inlineHelpText>* Only Betty can edit this field.</inlineHelpText>
    <label>Admin Extn Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>