src/objects/Loaner_Line__c/fields/Admin_Status__c.field-meta.xml
<CustomField>
    <fullName>Admin_Status__c</fullName>
    <inlineHelpText>* Only Betty can edit this field.</inlineHelpText>
    <label>Admin Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>