src/objects/Loaner_Line__c/fields/Balance_to_be_returned__c.field-meta.xml
<CustomField>
    <fullName>Balance_to_be_returned__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;Extension_Item&apos; , Extension_Loaner_Qty__c ,
IF (
AND (
OR (TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;30&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;60&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;90&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;120&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;180&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;365&quot;),
Ship_Status__c = &quot;Shipped&quot;,
ISPICKVAL( Line_Status__c , &quot;Approved&quot;)
), ( Loaner_Qty__c - Total_Return_Quantity__c ),

IF (
AND (
OR (TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;30&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;60&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;90&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;120&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;180&quot;, TEXT ( Loaner__r.Loaner_Duration__c ) = &quot;365&quot;),
ISPICKVAL( Line_Status__c , &quot;Approved&quot;),
LEN( SO_Number_Migration__c ) &gt; 7
), ( Loaner_Qty__c - Total_Return_Quantity__c ),
0
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance to be returned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>