src/objects/Loaner_Line__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>IF( AND(Product__r.BU_Code__c == &apos;0040&apos;,NOT( ISPICKVAL(Product__r.Product_Family__c, &apos;WSS-OIG&apos;)),NOT(ISPICKVAL(Product__r.Product_Family__c, &apos;WSS-OCM&apos;) )), &apos;WSS&apos;, &apos;Non WSS&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>