src/objects/Loaner_Line__c/fields/ByPassProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>ByPassProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>