src/objects/Loaner_Line__c/fields/CPN_Description__c.field-meta.xml
<CustomField>
    <fullName>CPN_Description__c</fullName>
    <label>CPN/Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>