src/objects/Loaner_Line__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF( RecordType.DeveloperName =&apos;Extension_Item&apos;,Loaner__r.Loaner_Request__r.Company_Name_End_Cust__r.Name, Loaner__r.Company_Name_End_Cust__r.Name )</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>