src/objects/Loaner_Line__c/fields/Days_Remaning_For_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaning_For_Return_Date__c</fullName>
    <formula>Effective_Return_Due_Date__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaning For Return Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>