src/objects/Loaner_Line__c/fields/Display_Product_Code_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Display_Product_Code_Marketing__c</fullName>
    <formula>&apos;Loaner Line Name &apos;+ Name  +&apos; / Product Name &apos;+Product__r.Name+&apos; / Marketing P/N &apos;+ Marketing_P_N__c +&apos; / Shipped Date &apos;+ TEXT( MONTH(Shipped_Date__c  ))+&quot;/&quot; +TEXT(DAY(Shipped_Date__c  ))+&quot;/&quot; +TEXT(YEAR(Shipped_Date__c  ) )+ &apos; /Effective Return Due Date &apos; +TEXT( MONTH( Effective_Return_Due_Date__c ))+&quot;/&quot; +TEXT(DAY(Effective_Return_Due_Date__c))+&quot;/&quot; +TEXT(YEAR(Effective_Return_Due_Date__c)   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Product Code Marketing</label>
    <type>Text</type>
</CustomField>