src/objects/Loaner_Line__c/fields/ECO_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>ECO_Number_Formula__c</fullName>
    <description>Created For Loaner Realtime Integration Performance</description>
    <formula>Loaner__r.ECO_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECO Number Formula</label>
    <type>Text</type>
</CustomField>