src/objects/Loaner_Line__c/fields/Effective_Return_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Return_Due_Date__c</fullName>
    <formula>IF( ISBLANK( Manual_Return_Due_Date__c ) ,  Return_Due_Date__c ,  Manual_Return_Due_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Return Due Date</label>
    <type>Date</type>
</CustomField>