src/objects/Loaner_Line__c/fields/Est_Annual_Qty__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Qty__c</fullName>
    <label>Est Annual Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>