src/objects/Loaner_Line__c/fields/Extend_Date__c.field-meta.xml
<CustomField>
    <fullName>Extend_Date__c</fullName>
    <inlineHelpText>Loaner Item Extended By</inlineHelpText>
    <label>Extend To Date</label>
    <type>Date</type>
</CustomField>