src/objects/Loaner_Line__c/fields/Extend_Line__c.field-meta.xml
<CustomField>
    <fullName>Extend_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extend Line?</label>
    <type>Checkbox</type>
</CustomField>