src/objects/Loaner_Line__c/fields/Extended_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Extended_Product_Name__c</fullName>
    <formula>Loaner_Line__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Product Name</label>
    <type>Text</type>
</CustomField>