src/objects/Loaner_Line__c/fields/Extension_Loaner_Qty__c.field-meta.xml
<CustomField>
    <fullName>Extension_Loaner_Qty__c</fullName>
    <label>Extension Loaner Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>