src/objects/Loaner_Line__c/fields/Extension_Return_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Return_Due_Date__c</fullName>
    <description>Extended Return Due Date by adding Loaner Duration and Extension Days to Return Due Date 
on Extension Item Record Type</description>
    <inlineHelpText>Extended Return Due Date by adding Loaner Duration and Extension Days to Return Due Date</inlineHelpText>
    <label>Loaner Line Return Due Date</label>
    <type>Date</type>
</CustomField>