src/objects/Loaner_Line__c/fields/Generic_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Generic_Product_Family__c</fullName>
    <label>Generic Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>