src/objects/Loaner_Line__c/fields/Initial_Error_Message_Present__c.field-meta.xml
<CustomField>
    <fullName>Initial_Error_Message_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Error Message Present</label>
    <type>Checkbox</type>
</CustomField>