src/objects/Loaner_Line__c/fields/Inside_Sales_Email_Finisar__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Email_Finisar__c</fullName>
    <description>Inside Sales Finisar Email</description>
    <label>Inside Sales Finisar Email</label>
    <type>Email</type>
</CustomField>