src/objects/Loaner_Line__c/fields/Inside_Sales_Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Sales_Rep_Email__c</fullName>
    <description>Inside Sales Sales Rep Email</description>
    <label>Inside Sales Sales Rep  Email</label>
    <type>Email</type>
</CustomField>