src/objects/Loaner_Line__c/fields/Invalid_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Line Item</label>
    <type>Checkbox</type>
</CustomField>