src/objects/Loaner_Line__c/fields/Is_Base_PN__c.field-meta.xml
<CustomField>
    <fullName>Is_Base_PN__c</fullName>
    <formula>Product__r.Is_Base_P_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Base P/N?</label>
    <type>Checkbox</type>
</CustomField>