src/objects/Loaner_Line__c/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>