src/objects/Loaner_Line__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <displayFormat>LL-{000}</displayFormat>
    <label>Line #</label>
    <type>AutoNumber</type>
</CustomField>