src/objects/Loaner_Line__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <formula>SAM__c * SOM__c</formula>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>