src/objects/Loaner_Line__c/fields/Loaner__c.field-meta.xml
<CustomField>
    <fullName>Loaner__c</fullName>
    <label>Loaner</label>
    <referenceTo>Loaner__c</referenceTo>
    <relationshipLabel>Loaner Lines</relationshipLabel>
    <relationshipName>Loaner_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>