src/objects/Loaner_Line__c/fields/Loaner_Category_Formula__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Category_Formula__c</fullName>
    <description>Created For Loaner  Real time Integration Performance tuning</description>
    <formula>TEXT(Loaner__r.Loaner_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner Category Formula</label>
    <type>Text</type>
</CustomField>