src/objects/Loaner_Line__c/fields/Loaner_Line__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Loaner Item  which it is extended by number of days</description>
    <label>Loaner Requestor Line</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Loaner_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Loaner Item</value>
        </filterItems>
        <filterItems>
            <field>Loaner_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Loaner Item Read Only</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Loaner_Line__c</referenceTo>
    <relationshipLabel>Extension Lines</relationshipLabel>
    <relationshipName>Extension_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>