src/objects/Loaner_Line__c/fields/Loaner_Line_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Line_Shipped_Date__c</fullName>
    <formula>Loaner_Line__r.Shipped_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner Line Shipped Date</label>
    <type>Date</type>
</CustomField>