src/objects/Loaner_Line__c/fields/Loaner_Price_100_999_column_price__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Price_100_999_column_price__c</fullName>
    <inlineHelpText>Fill out if system does not auto-populate.</inlineHelpText>
    <label>Loaner Price (100-999 column price)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>