src/objects/Loaner_Line__c/fields/Loaner_Qty__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Qty__c</fullName>
    <label>Loaner Qty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>