src/objects/Loaner_Line__c/fields/Loaner_Return_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Return_Carrier__c</fullName>
    <label>Loaner Return Carrier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>