src/objects/Loaner_Line__c/fields/Loaner_Return_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Return_Ship_Date__c</fullName>
    <label>Loaner Return Ship Date</label>
    <type>Date</type>
</CustomField>