src/objects/Loaner_Line__c/fields/Loaner_Return_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Return_Tracking_Number__c</fullName>
    <label>Loaner Return Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>