src/objects/Loaner_Line__c/fields/Loaner_Ship_From__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Ship_From__c</fullName>
    <label>Loaner Ship From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factory Stock</fullName>
            </value>
            <value>
                <fullName>Returned Loaner Stock</fullName>
            </value>
            <value>
                <fullName>Transfer From Existing Loaner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>