src/objects/Loaner_Line__c/fields/Loaner_Total__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Total__c</fullName>
    <formula>Loaner_Qty__c * Loaner_Price_100_999_column_price__c</formula>
    <label>Loaner Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>