src/objects/Loaner_Line__c/fields/LoanerReturnStatus__c.field-meta.xml
<CustomField>
    <fullName>LoanerReturnStatus__c</fullName>
    <formula>IF( Ship_Status__c =&apos;Not Shipped&apos;, &apos;Open&apos;, 
 IF(Ship_Status__c =&apos;Shipped&apos;,  IF( Total_Return_Quantity__c &gt;0, &apos;Open&apos; , &apos;Close&apos; ) , &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner Return Status</label>
    <type>Text</type>
</CustomField>