src/objects/Loaner_Line__c/fields/Manual_Return_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Return_Due_Date__c</fullName>
    <inlineHelpText>User Can Enter Date to return Loaner Item</inlineHelpText>
    <label>Manual Return Due Date</label>
    <type>Date</type>
</CustomField>