src/objects/Loaner_Line__c/fields/Manual_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Shipped_Date__c</fullName>
    <label>Manual Shipped Date</label>
    <type>Date</type>
</CustomField>