src/objects/Loaner_Line__c/fields/Manual_Update__c.field-meta.xml
<CustomField>
    <fullName>Manual_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Update</label>
    <type>Checkbox</type>
</CustomField>