src/objects/Loaner_Line__c/fields/Marketing_P_N__c.field-meta.xml
<CustomField>
    <fullName>Marketing_P_N__c</fullName>
    <formula>IF( RecordType.DeveloperName =&apos;Extension_Item&apos;,Loaner_Line__r.Product__r.Marketing_P_N__c,Product__r.Marketing_P_N__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing P/N</label>
    <type>Text</type>
</CustomField>