src/objects/Loaner_Line__c/fields/Number_of_extensions_approved_before_thi__c.field-meta.xml
<CustomField>
    <fullName>Number_of_extensions_approved_before_thi__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of extensions approved before this approval</description>
    <inlineHelpText>Number of extensions approved before this approval</inlineHelpText>
    <label>Number of extensions approved before</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>