src/objects/Loaner_Line__c/fields/Oracle_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Line_Id__c</fullName>
    <label>Oracle Line Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>