src/objects/Loaner_Line__c/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>Order_Line__c</referenceTo>
    <relationshipLabel>Loaner Lines</relationshipLabel>
    <relationshipName>Loaner_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>