src/objects/Loaner_Line__c/fields/Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Type__c</fullName>
    <label>Part Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Customized</fullName>
            </value>
            <value>
                <fullName>Do not transfer</fullName>
            </value>
            <value>
                <fullName>Cannot be converted</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>