src/objects/Loaner_Line__c/fields/Part_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Part_Type_Notes__c</fullName>
    <inlineHelpText>* Only Betty can edit this field.</inlineHelpText>
    <label>Part Type Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>