src/objects/Loaner_Line__c/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <label>Part Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>