src/objects/Loaner_Line__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <formula>if ( Return_Due_Date__c == null, &apos;Open&apos;, if ( TODAY() &gt; Return_Due_Date__c, &apos;Past Due&apos;, &apos;Open&apos; ) )</formula>
    <label>Past Due</label>
    <type>Text</type>
</CustomField>