src/objects/Loaner_Line__c/fields/Product_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_External_Id__c</fullName>
    <description>Created for Loaner Reqaltime Integration</description>
    <formula>Product__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product External Id</label>
    <type>Text</type>
</CustomField>