src/objects/Loaner_Line__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>IF(RecordType.DeveloperName=&apos;Extension_Item&apos;,TEXT(Loaner_Line__r.Product__r.Product_Family__c) ,TEXT(Product__r.Product_Family__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>