src/objects/Loaner_Line__c/fields/Product_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Text__c</fullName>
    <formula>TEXT(Product__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_Type_Text</label>
    <type>Text</type>
</CustomField>