src/objects/Loaner_Line__c/fields/Production_Price_ASP__c.field-meta.xml
<CustomField>
    <fullName>Production_Price_ASP__c</fullName>
    <label>Production Price (ASP)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>