src/objects/Loaner_Line__c/fields/Reminder_Date_for_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Date_for_Return_Date__c</fullName>
    <description>Copies Return Due Date to this field for posting alerts to Chatter</description>
    <inlineHelpText>Copies Return Due Date to this field for posting alerts to Chatter</inlineHelpText>
    <label>Reminder Date for Return Date</label>
    <type>Date</type>
</CustomField>