src/objects/Loaner_Line__c/fields/RSM_PLM_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>RSM_PLM_Approval_Status__c</fullName>
    <label>RSM Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>