src/objects/Loaner_Line__c/fields/S_O__c.field-meta.xml
<CustomField>
    <fullName>S_O__c</fullName>
    <label>S/O #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>