src/objects/Loaner_Line__c/fields/SAM__c.field-meta.xml
<CustomField>
    <fullName>SAM__c</fullName>
    <formula>Production_Price_ASP__c * Est_Annual_Qty__c</formula>
    <label>SAM($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>