src/objects/Loaner_Line__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <externalId>true</externalId>
    <label>Serial Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>