src/objects/Loaner_Line__c/fields/Ship_Status__c.field-meta.xml
<CustomField>
    <fullName>Ship_Status__c</fullName>
    <formula>Order_Line__r.Ship_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship Status</label>
    <type>Text</type>
</CustomField>