src/objects/Loaner_Line__c/fields/Ship_StatusOLD__c.field-meta.xml
<CustomField>
    <fullName>Ship_StatusOLD__c</fullName>
    <label>Ship StatusOLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Not Shipped</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Booked</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>