src/objects/Loaner_Line__c/fields/Shipped_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Status__c</fullName>
    <formula>Order_Line__r.Oracle_Order_Line_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped Status</label>
    <type>Text</type>
</CustomField>