src/objects/Loaner_Line__c/fields/SO_Line_Migration__c.field-meta.xml
<CustomField>
    <fullName>SO_Line_Migration__c</fullName>
    <label>Legacy SO Line#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>