src/objects/Loaner_Line__c/fields/SO_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Line_Number__c</fullName>
    <description>Order Line SO Number</description>
    <formula>Order_Line__r.Cust_Po_Line_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Line Number</label>
    <type>Text</type>
</CustomField>