src/objects/Loaner_Line__c/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <formula>Order_Line__r.Order__r.PoNumber +&quot; - &quot;+ Order_Line__r.Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Number</label>
    <type>Text</type>
</CustomField>