src/objects/Loaner_Line__c/fields/SO_Number_Migration__c.field-meta.xml
<CustomField>
    <fullName>SO_Number_Migration__c</fullName>
    <label>Legacy SO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>