src/objects/Loaner_Line__c/fields/SOM__c.field-meta.xml
<CustomField>
    <fullName>SOM__c</fullName>
    <inlineHelpText>Share of Market (%)</inlineHelpText>
    <label>SOM(%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>