src/objects/Loaner_Line__c/fields/Total_Extended_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Extended_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Extended Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>