src/objects/Loaner_Line__c/fields/Total_Return_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Return_Quantity__c</fullName>
    <label>Total Return Quantity</label>
    <summarizedField>Return_Detail__c.Return_Quantity__c</summarizedField>
    <summaryForeignKey>Return_Detail__c.Loaner_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>