src/objects/Loaner_Line__c/fields/User_Notes__c.field-meta.xml
<CustomField>
    <fullName>User_Notes__c</fullName>
    <label>User Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>