src/objects/Loaner_Line__c/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loaner_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>